--- a/listings/index.html
+++ b/listings/index.html
@@ -82,7 +82,7 @@
               </select>
             </label>
 
-            <label class="field" for="fArea">
+  <label class="field" for="fArea">
   <span class="small">Area / Sector</span>
 
   <input
@@ -118,6 +118,74 @@
       <button type="button" class="area-opt" data-value="Other">Other</button>
     </div>
   </div>
+
+  <datalist id="hisarAreas">
+    <option value="Sector 1–4"></option>
+    <option value="Sector 3"></option>
+    <option value="Sector 5"></option>
+    <option value="Sector 9–11"></option>
+    <option value="Sector 13"></option>
+    <option value="Sector 14"></option>
+    <option value="Sector 15"></option>
+    <option value="Sector 16–17"></option>
+    <option value="Sector 24"></option>
+    <option value="Sector MGA"></option>
+    <option value="Sector 27–28"></option>
+    <option value="Sector 33"></option>
+    <option value="Sector-PLA"></option>
+
+    <option value="Model Town"></option>
+    <option value="Model Town Extension"></option>
+    <option value="Housing Board Colony (Sirsa Road)"></option>
+    <option value="Sundar Nagar"></option>
+    <option value="Vikas Nagar"></option>
+    <option value="Preeti Nagar"></option>
+    <option value="Professor Colony"></option>
+    <option value="Aggarwal Colony"></option>
+    <option value="Aggarsain Colony"></option>
+    <option value="Prem Nagar"></option>
+    <option value="Sant Nagar"></option>
+    <option value="Jawahar Nagar"></option>
+    <option value="Shastri Nagar"></option>
+    <option value="Azad Nagar"></option>
+    <option value="Indira Colony"></option>
+    <option value="Adarsh Nagar"></option>
+    <option value="Shanti Nagar"></option>
+    <option value="Vidut Nagar"></option>
+    <option value="Jindal Colony"></option>
+    <option value="Teachers Colony"></option>
+    <option value="Doctors Colony"></option>
+    <option value="Bank Colony"></option>
+    <option value="Police Lines"></option>
+    <option value="Camp Area"></option>
+
+    <option value="New Grain Market"></option>
+    <option value="Old Mandi Road"></option>
+    <option value="Nagori Gate"></option>
+    <option value="Main Market"></option>
+    <option value="Rajguru Market"></option>
+    <option value="Auto Market"></option>
+    <option value="Industrial Area"></option>
+    <option value="Industrial Area Phase 1"></option>
+    <option value="Industrial Area Phase 2"></option>
+    <option value="Delhi Road Market"></option>
+    <option value="Hansi Road Market"></option>
+    <option value="Tosham Road Market"></option>
+    <option value="Barwala Road Market"></option>
+    <option value="Railway Road Market"></option>
+    <option value="Bus Stand Area"></option>
+
+    <option value="Parav Chowk"></option>
+    <option value="Lahoria Chowk"></option>
+    <option value="Jindal Chowk"></option>
+    <option value="ITI Chowk"></option>
+    <option value="Dabra Chowk"></option>
+
+    <option value="Hisar Cantt Area"></option>
+    <option value="Mirzapur Road"></option>
+    <option value="Airport Road Area"></option>
+    <option value="Other"></option>
+  </datalist>
 </label>
 
             <label class="field" for="fSize">
