--- a/listings/index.html
+++ b/listings/index.html
@@ -47,8 +47,8 @@
 
 <main class="container">
   <section class="hero">
-    <h1>Hisar Rentals</h1>
-    <p>Premium listings with clean filters + search. Contact details unlock via plans (coming soon).</p>
+    <h1>ARH Rentals — Hisar</h1>
+    <p>Owner-posted rental listings with smart search.</p>
   </section>
 
   <div class="listings-page-layout" aria-label="Listings with filters">
