feat: Introduce global styling, responsive header, and a new listings page.

--- a/index.html
+++ b/index.html
@@ -24,28 +24,30 @@
 <body class="home">
 
 <header class="site-header">
-  <div class="container navbar">
+  <div class="container">
+    <div class="navbar">
 
-    <a class="brand" href="/">
-      <img class="brand-logo" src="/assets/arh-logo.png" alt="ARH Rentals Logo">
-      <div class="brand-title">
-        <strong>ARH Rentals</strong>
-        <span>by Anjani Real Heights</span>
+      <a class="brand" href="/">
+        <img class="brand-logo" src="/assets/arh-logo.png" alt="ARH Rentals Logo">
+        <div class="brand-title">
+          <strong>ARH Rentals</strong>
+          <span>by Anjani Real Heights</span>
+        </div>
+      </a>
+
+      <div class="header-actions">
+        <a class="btn btn-primary header-cta" href="/post">Post Property</a>
+
+        <button class="nav-toggle"
+                type="button"
+                aria-label="Menu"
+                aria-controls="primary-navigation"
+                aria-expanded="false">
+          <span class="nav-toggle-icon" aria-hidden="true"></span>
+        </button>
       </div>
-    </a>
 
-    <div class="header-actions">
-      <a class="btn btn-primary header-cta" href="/post">Post Property</a>
-
-      <button class="nav-toggle"
-              type="button"
-              aria-label="Menu"
-              aria-controls="primary-navigation"
-              aria-expanded="false">
-        <span class="nav-toggle-icon" aria-hidden="true"></span>
-      </button>
     </div>
-
   </div>
 
   <nav class="menu" id="primary-navigation" aria-label="Primary">
