--- a/listings/index.html
+++ b/listings/index.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Listings • ARH Rentals</title>
-  <link rel="stylesheet" href="/assets/styles.css" />
+   <link rel="stylesheet" href="../assets/styles.css" />
 </head>
 
 <body class="listings-page">
   <header class="site-header">
     <div class="container">
       <div class="navbar">
-        <a class="brand" href="/">
-          <img class="brand-logo" src="/assets/arh-logo.png" alt="ARH Rentals Logo" />
+        <a class="brand" href="../index.html">
+          <img class="brand-logo" src="../assets/arh-logo.png" alt="ARH Rentals Logo" />
           <div class="brand-title">
             <strong>ARH Rentals</strong>
             <span>by Anjani Real Heights</span>
@@ -535,7 +535,7 @@
     </footer>
   </main>
 
-  <script src="/assets/app.js"></script>
+ <script src="../assets/app.js"></script>
 </body>
 
 </html>
