--- a/listings/index.html
+++ b/listings/index.html
@@ -55,9 +55,9 @@
       <div class="card-body">
         <h2>How to Use This Page</h2>
         <p class="muted">
-          Yahan Hisar ke owners dwara post ki gayi rental listings dikhayi ja rahi hain.
-          ARH Rentals sirf information access provide karta hai.
-          Property se related har deal directly owner–tenant ke beech hoti hai.
+          This page displays rental listings posted by property owners in Hisar.
+          ARH Rentals provides access to property information only.
+          All property-related dealings take place directly between the owner and the tenant.
         </p>
         <p class="small muted">Currently serving rental listings across Hisar.</p>
       </div>
