--- a/listings/index.html
+++ b/listings/index.html
@@ -406,7 +406,7 @@
                     Contact details unlock will be available in a future update.
                   </div>
                   <div class="small muted listing-expiry">
-                    This listing will auto-hide after expiry if not renewed. Owners can renew to keep listing visible.
+                    Listings automatically become hidden after expiry if not renewed by the owner.
                   </div>
                 </div>
 
@@ -434,7 +434,7 @@
                     Contact details unlock will be available in a future update.
                   </div>
                     <div class="small muted listing-expiry">
-                    This listing will auto-hide after expiry if not renewed. Owners can renew to keep listing visible.
+                    Listings automatically become hidden after expiry if not renewed by the owner.
                   </div>
                 </div>
 
@@ -462,7 +462,7 @@
                     Contact details unlock will be available in a future update.
                   </div>
                    <div class="small muted listing-expiry">
-                    This listing will auto-hide after expiry if not renewed. Owners can renew to keep listing visible.
+                    Listings automatically become hidden after expiry if not renewed by the owner.
                   </div>
                 </div>
               </div>
