--- a/listings/index.html
+++ b/listings/index.html
@@ -382,7 +382,7 @@
               </div>
 
               <div id="listingWrap" class="listings listing-wrap">
-                <div class="listing" data-rent="12000">
+                <div class="listing" data-rent="12000" data-status="active" data-expiry="2025-12-31">
                   <div>
                     <h3>2 BHK House</h3>
                     <p>Sector 14 • Hisar</p>
@@ -410,7 +410,7 @@
                   </div>
                 </div>
 
-                <div class="listing" data-rent="18000">
+                 <div class="listing" data-rent="18000" data-status="active" data-expiry="2025-12-31">
                   <div>
                     <h3>Shop for Rent</h3>
                     <p>Main Market Area</p>
@@ -438,7 +438,7 @@
                   </div>
                 </div>
 
-                <div class="listing" data-rent="6500">
+               <div class="listing" data-rent="6500" data-status="active" data-expiry="2025-12-31">
                   <div>
                     <h3>1 RK</h3>
                     <p>Near Income Tax Office</p>
