--- a/contact-us.html
+++ b/contact-us.html
@@ -63,6 +63,7 @@
     <div class="container nav-inner">
       <a href="index.html">Home</a>
       <a href="pricing/index.html">Pricing</a>
+      <a href="dashboard/index.html">Dashboard</a>
       <a href="contact-us.html">Contact</a>
     </div>
   </nav>
