--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <a href="/" class="active">Home</a>
       <a href="/listings">Listings</a>
       <a href="/pricing">Plans</a>
+      <a href="/dashboard">Dashboard</a>
       <a href="/legal">Legal</a>
       <a class="btn btn-primary menu-cta" href="/post">Post Property</a>
     </div>
