--- a/legal/index.html
+++ b/legal/index.html
@@ -22,6 +22,7 @@
       <a href="/">Home</a>
       <a href="/listings">Listings</a>
       <a href="/pricing">Plans</a>
+       <a href="/dashboard">Dashboard</a>
       <a href="/legal">Legal</a>
       <a class="btn btn-primary" href="/post">Post Property</a>
     </nav>
