--- a/listings/index.html
+++ b/listings/index.html
@@ -37,6 +37,7 @@
           <a href="/">Home</a>
           <a class="active" href="/listings">Listings</a>
           <a href="/pricing">Plans</a>
+          <a href="/dashboard">Dashboard</a>
           <a href="/legal">Legal</a>
           <a class="btn btn-primary menu-cta" href="/post">Post Property</a>
 
