--- a/pricing/index.html
+++ b/pricing/index.html
@@ -40,6 +40,7 @@
         <a href="../index.html">Home</a>
         <a href="../listings/index.html">Listings</a>
         <a class="active" href="./index.html">Plans</a>
+        <a href="../dashboard/index.html">Dashboard</a>
         <a href="../legal/index.html">Legal</a>
         <a class="btn btn-primary menu-cta" href="../post/index.html">Post Property</a>
       </div>
