--- a/property.html
+++ b/property.html
@@ -21,6 +21,7 @@
     <nav class="menu">
       <a href="listings.html">Rentals</a>
       <a href="pricing.html">Pricing</a>
+      <a href="/dashboard">Dashboard</a>
       <a href="legal.html">Legal</a>
       <a class="btn btn-primary" href="post.html">Post Property</a>
     </nav>
