--- a/contact-us.html
+++ b/contact-us.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact Us | Anjani Real Heights</title>
   <meta name="description" content="Contact Anjani Real Heights for property buying, selling, renting, and support related queries." />
+  <link rel="stylesheet" href="assets/styles.css" />
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -54,6 +55,22 @@
       </a>
 
       <div class="header-actions">
+        <div class="account-menu" data-account-menu hidden>
+          <button class="account-trigger" type="button" aria-expanded="false" aria-controls="account-dropdown">
+            <span class="account-trigger-text">You're logged in</span>
+            <span class="account-chevron" aria-hidden="true">▾</span>
+          </button>
+          <div class="account-dropdown" id="account-dropdown" role="menu" hidden>
+            <div class="account-meta">
+              <span class="small muted">You're logged in using</span>
+              <span class="account-phone" data-account-phone>—</span>
+            </div>
+            <div class="account-links">
+              <a href="/dashboard/" class="account-link" role="menuitem">My Listings</a>
+              <button type="button" class="account-link" data-account-logout>Logout</button>
+            </div>
+          </div>
+        </div>
         <a class="btn btn-primary header-cta" href="contact-us.html">Get Quote</a>
       </div>
     </div>
@@ -63,7 +80,6 @@
     <div class="container nav-inner">
       <a href="index.html">Home</a>
       <a href="pricing/index.html">Pricing</a>
-      <a href="dashboard/index.html">Dashboard</a>
       <a href="contact-us.html">Contact</a>
     </div>
   </nav>
@@ -116,5 +132,6 @@
 
   </div>
 
+  <script src="assets/app.js"></script>
 </body>
 </html>
