--- a/legal/index.html
+++ b/legal/index.html
@@ -22,8 +22,23 @@
       <a href="/">Home</a>
       <a href="/listings">Listings</a>
       <a href="/pricing">Plans</a>
-       <a href="/dashboard">Dashboard</a>
       <a href="/legal">Legal</a>
+      <div class="account-menu" data-account-menu hidden>
+        <button class="account-trigger" type="button" aria-expanded="false" aria-controls="account-dropdown">
+          <span class="account-trigger-text">You're logged in</span>
+          <span class="account-chevron" aria-hidden="true">▾</span>
+        </button>
+        <div class="account-dropdown" id="account-dropdown" role="menu" hidden>
+          <div class="account-meta">
+            <span class="small muted">You're logged in using</span>
+            <span class="account-phone" data-account-phone>—</span>
+          </div>
+          <div class="account-links">
+            <a href="/dashboard/" class="account-link" role="menuitem">My Listings</a>
+            <button type="button" class="account-link" data-account-logout>Logout</button>
+          </div>
+        </div>
+      </div>
       <a class="btn btn-primary" href="/post">Post Property</a>
     </nav>
   </div>
