--- a/pricing/index.html
+++ b/pricing/index.html
@@ -21,6 +21,22 @@
       </a>
 
       <div class="header-actions">
+         <div class="account-menu" data-account-menu hidden>
+          <button class="account-trigger" type="button" aria-expanded="false" aria-controls="account-dropdown">
+            <span class="account-trigger-text">You're logged in</span>
+            <span class="account-chevron" aria-hidden="true">▾</span>
+          </button>
+          <div class="account-dropdown" id="account-dropdown" role="menu" hidden>
+            <div class="account-meta">
+              <span class="small muted">You're logged in using</span>
+              <span class="account-phone" data-account-phone>—</span>
+            </div>
+            <div class="account-links">
+              <a href="/dashboard/" class="account-link" role="menuitem">My Listings</a>
+              <button type="button" class="account-link" data-account-logout>Logout</button>
+            </div>
+          </div>
+        </div>
         <a class="btn btn-primary header-cta" href="../contact.html">Post Property</a>
 
         <button class="nav-toggle"
@@ -40,7 +56,6 @@
         <a href="../index.html">Home</a>
         <a href="../listings/index.html">Listings</a>
         <a class="active" href="./index.html">Plans</a>
-        <a href="../dashboard/index.html">Dashboard</a>
         <a href="../legal/index.html">Legal</a>
         <a class="btn btn-primary menu-cta" href="../post/index.html">Post Property</a>
       </div>
