--- a/property.html
+++ b/property.html
@@ -21,8 +21,23 @@
     <nav class="menu">
       <a href="listings.html">Rentals</a>
       <a href="pricing.html">Pricing</a>
-      <a href="/dashboard">Dashboard</a>
       <a href="legal.html">Legal</a>
+      <div class="account-menu" data-account-menu hidden>
+        <button class="account-trigger" type="button" aria-expanded="false" aria-controls="account-dropdown">
+          <span class="account-trigger-text">You're logged in</span>
+          <span class="account-chevron" aria-hidden="true">▾</span>
+        </button>
+        <div class="account-dropdown" id="account-dropdown" role="menu" hidden>
+          <div class="account-meta">
+            <span class="small muted">You're logged in using</span>
+            <span class="account-phone" data-account-phone>—</span>
+          </div>
+          <div class="account-links">
+            <a href="/dashboard/" class="account-link" role="menuitem">My Listings</a>
+            <button type="button" class="account-link" data-account-logout>Logout</button>
+          </div>
+        </div>
+      </div>
       <a class="btn btn-primary" href="post.html">Post Property</a>
     </nav>
   </div>
