--- a/property.html
+++ b/property.html
@@ -24,7 +24,7 @@
       <a href="legal.html">Legal</a>
       <div class="account-menu" data-account-menu hidden>
         <button class="account-trigger" type="button" aria-expanded="false" aria-controls="account-dropdown">
-          <span class="account-trigger-text">You're logged in</span>
+          <span class="account-trigger-text" data-account-status>Logged in</span>
           <span class="account-chevron" aria-hidden="true">▾</span>
         </button>
         <div class="account-dropdown" id="account-dropdown" role="menu" hidden>
